problem with text aligment

--- a/index.html
+++ b/index.html
@@ -38,14 +38,14 @@
         </div>
 
         <div class="os5">
-            <div class="brown-square">
-                <!-- <div class="text">Some text</div> -->
+            <div class="brown-square bs5">
+                <div class="text">Some text</div>
+            </div>
+            <div class="brown-square bs5center">
+                <div class="text">Some text</div>
             </div>
             <div class="brown-square bs5">
-                <!-- <div class="text">Some text</div> -->
-            </div>
-            <div class="brown-square">
-                <!-- <div class="text">Some text</div> -->
+                <div class="text">Some text</div>
             </div>
         </div>
 
