done with padding

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <div class="brown-square bs5">
                 <div class="text">Some text</div>
             </div>
-            <div class="brown-square bs5center">
+            <div class="brown-square">
                 <div class="text">Some text</div>
             </div>
             <div class="brown-square bs5">
